--- a/strawberry.org
+++ b/strawberry.org
@@ -58,7 +58,7 @@ In the following code, we assume column vectors for decision variables and objec
 
 Major version log:
 
-- November 2016 :: change of interface to Strawberry: the objective function must now return not only the objective function values (first entry in return list) but also the feasibility of the point in the search space (as second entry).
+- November 2016 :: change of interface to Strawberry: the objective function must now return not only the objective function values (first entry in return list) but also the feasibility (measure of constraint violation) of the point in the search space (as second entry).
 - July 2016 :: multi-objective version extended to work for any number of criteria instead of just 2.
 - October 2015 :: started work on a MI-Strawberry version, hopefully as upwards compatible as possible.
 - September 2015 :: implemented a rank based fitness, used to prepare results in [[file:~/synced/research/multiobjective.optimisation/strawberry/paper.pdf][the paper on understanding the impacts of constraints]].  There is now a choice of fitness functions as the old, Pareto based, fitness function is still available (cf. Deb (2000) for an example).
@@ -106,7 +106,7 @@ The function has the following arguments:
 - b :: upper bounds for all variables
 - f :: handle for the objective function which has signature
      : [z g] = f(x)
-     where ~z~ is a vector of objective function values and ~g~ indicates whether a solution is feasible (~g == 0)~ or infeasible (~g > 0~).  The actual value of ~g~ for infeasible solutions is currently not considered but could, in the future, be used to rank solutions based on how infeasible they may be.  Therefore, it is good practice to have the value be a measure of constraint violation if you wish your code to be future proofed.  If your objective function is unconstrained, simply ensure that ~0~ is returned as the second entry in the return list.
+     where ~z~ is a vector of objective function values and ~g~ indicates whether a solution is feasible (~g <= 0)~ or infeasible (~g > 0~).  The actual value of ~g~ for infeasible solutions is used to rank solutions.  Negative values of ~g~ are not used at all.  If your objective function is unconstrained, simply ensure that ~0~ is returned as the second entry in the return list.
 - ngen :: one of the stopping criteria: maximum number of generations of plant propagation to allow
 - npop :: the base number in the population.  The actual number will be larger, depending on the value of ~nrmax~.  ~npop~ decides how many plants actually propagate but the number of new solutions depends on the fitness of those chosen to propagate and the maximum number of runners allowed, ~nrmax~.
 - nrmax :: the maximum number of runners to create for any solution if chosen to propagate.
@@ -588,7 +588,7 @@ To accomplish the latter, we consider a ranking that takes into account how good
     global moga_version
     global mosd_version
     if isempty (strawberry_version)
-      strawberry_version = '2016.11.24 15:34:25';
+      strawberry_version = '2016.11.24 15:40:33';
       mosd_initialise
       moga_initialise
       printf (': STRAWBERRY %s, main function\n', strawberry_version)
