--- a/strawberry.org
+++ b/strawberry.org
@@ -198,6 +198,10 @@ Determine whether the objective function also has information on feasibility.
   catch err
     printf('Error identifier is %s\n', err.identifier);
     printf('Error message is %s\n', err.message);
+    printf('\nThis could be due to the change in Strawberry that\n')
+    printf('now requires the objective function to return a\n')
+    printf('feasibility indication as well as the objective function\n')
+    printf('value(s).\n\n')
     if (strcmp (err.identifier, 'Octave:undefined-function') || strcmp(err.identifier,'MATLAB:UndefinedFunction'))
       printf(': objective function is unconstrained.\n')
       constrained = 0;
@@ -207,7 +211,7 @@ Determine whether the objective function also has information on feasibility.
     endif
   end_try_catch
   if constrained
-    printf(': objective function is constrained.\n');
+       printf(': objective function is constrained.\n');
   endif
 #+end_src
 ** initial population
@@ -588,7 +592,7 @@ To accomplish the latter, we consider a ranking that takes into account how good
     global moga_version
     global mosd_version
     if isempty (strawberry_version)
-      strawberry_version = '2016.11.24 15:40:33';
+      strawberry_version = '2016.11.24 15:47:14';
       mosd_initialise
       moga_initialise
       printf (': STRAWBERRY %s, main function\n', strawberry_version)
@@ -901,6 +905,15 @@ This is simple test of three criteria.  The results can be seen in the following
 #+results: test3criteriaplot
 [[file:strawberry_test3.png]]
 
+#+name: test3criteriaobjective
+#+begin_src octave :tangle strawberry_test3objective.m
+  function [z g] = strawberry_test3objective(x)
+    z = [ sum((x-0.5).^2+1)
+          sum(cos(x))
+          sum(sin(x))];
+    g = 0;
+  endfunction
+#+end_src 
 #+name: test3criteria
 #+begin_src octave :tangle strawberry_test3.m
   function [x z paretoset] = strawberry_test3
@@ -910,19 +923,16 @@ This is simple test of three criteria.  The results can be seen in the following
     strawberry_numberofprocessors = 1;
     global strawberry_fitness_method
     strawberry_fitness_method = 0
-    f = @(x) [ sum((x-0.5).^2+1)
-               sum(cos(x))
-               sum(sin(x))];
     x0 = [0 0 0 0 0]';
     a = zeros(5,1);
     b = ones(5,1);
     printf('Testing three criteria problem with %d decision variables\n', length(x0))
     printf('starting with initial point '), x0
-    z0 = f(x0);
+    z0 = strawberry_test3objective(x0);
     printf('which has objective %d function values ', length(z0))
     for i=1:length(z0), printf('%f ', z0(i)), endfor; printf('\n')
     ## [x y nf ninf bestgen] = strawberry(x0, a, b, f, ngen, npop, nrmax, ns, population_strategy, output, g)
-    [x z nf ninf bestgen] = strawberry(x0, a, b, f, 1000, 20)
+    [x z nf ninf bestgen] = strawberry(x0, a, b, @strawberry_test3objective, 1000, 20)
     paretoset = z(1:3, findpareto(z(1:3,:)));
     [zz indices] = sort(paretoset(1,:));
     paretoset = paretoset(:,indices)
